Revert "Introduce `use_std` default feature"
The intention for this change was to get aho-corasick
compiled on wasm. Thanks to the discussion at
https://github.com/rust-lang/regex/pull/421
it became clear that there's a better solution to the
problem.

This reverts commit 0440919f725e058d9f08e477fb634edbb93c6689.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,8 @@ test = false
 doc = false
 bench = false
 
-[features]
-default = ["use_std"]
-use_std = ["memchr/use_std"]
-
 [dependencies]
-memchr = { version = "2", default-features = false }
+memchr = "2"
 
 [dev-dependencies]
 csv = "0.15"
